--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.vynokurov.step_first_lesson.FirstStepActivity"/>
+        <activity android:name="com.vynokurov.step_first_lesson.SecondActivity"/>
     </application>
 
 </manifest>
