--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     apply from: 'dependencies.gradle'
+    ext {
+        versions.kt = '1.4.10'
+    }
 
     repositories {
         google()
