Lesson three workshop finished

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name="com.vynokurov.step_first_lesson.FirstStepActivity"/>
         <activity android:name="com.vynokurov.step_first_lesson.SecondActivity"/>
+        <activity android:name="com.vynokurov.workshop_lesson_three.LessonThreeActivity"/>
     </application>
 
 </manifest>
