rename and create new module

--- a/0_app/build.gradle
+++ b/0_app/build.gradle
@@ -35,8 +35,8 @@ android {
 
 dependencies {
 
-    implementation project(":step-first-lesson")
-    implementation project(":workshop-lesson-three")
+    implementation project(':02_workshop-lesson-second')
+    implementation project(':03_workshop-lesson-three')
     //kt
     implementation kotlin.kotlinCore
     implementation kotlin.coroutines
