--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
-include ':workshop-lesson-three'
-include ':step-first-lesson',
-        ':app'
+include ':03_homework-lesson-three'
+include ':03_workshop-lesson-three'
+include ':02_workshop-lesson-second',
+        ':0_app'
 rootProject.name = "HomeMainActivity"
