--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     apply from: 'dependencies.gradle'
     ext {
         versions.kt = '1.4.10'
+        versions.kt = '1.4.10'
     }
 
     repositories {
