--- a/04_homework/build.gradle
+++ b/04_homework/build.gradle
@@ -1,7 +1,8 @@
-plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
-}
+apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+apply from: '../dependencies.gradle'
 
 android {
     compileSdkVersion 30
@@ -34,11 +35,17 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:${versions.kt}"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    //kt
+    implementation kotlin.kotlinCore
+    implementation kotlin.coroutines
+    implementation kotlin.coroutinesAndroid
+
+    //android
+    implementation androidx.coreKtx
+    implementation androidx.appCompat
+    implementation androidx.activityKtx
+    implementation androidx.fragmentKtx
+    implementation androidx.constrainLayout
+    implementation google.material
+
 }
