--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 include ':0_app',
+        ':0_movie_app',
         ':02_workshop-lesson-second',
         ':03_workshop-lesson-three',
         ':03_homework-lesson-three',
