--- a/settings.gradle
+++ b/settings.gradle
@@ -3,5 +3,5 @@ include ':0_app',
         ':02_workshop-lesson-second',
         ':03_workshop-lesson-three',
         ':03_homework-fragment_detail_movie',
-        ':04_homework'
+        ':04_homework-fragment_movie_list'
 rootProject.name = "BasicAndroidAcademy"
