added common module for ressources

--- a/03_homework-fragment_detail_movie/build.gradle
+++ b/03_homework-fragment_detail_movie/build.gradle
@@ -35,6 +35,8 @@ android {
 
 dependencies {
 
+    implementation project(':0_common')
+
     //kt
     implementation kotlin.kotlinCore
     implementation kotlin.coroutines
