--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 include ':0_app',
         ':0_movie_app',
+        ':0_common',
         ':02_workshop-lesson-second',
         ':03_workshop-lesson-three',
         ':03_homework-fragment_detail_movie',
