--- a/0_app/build.gradle
+++ b/0_app/build.gradle
@@ -36,6 +36,7 @@ android {
 dependencies {
 
     implementation project(':0_common')
+    implementation project(':0_movie_app')
     implementation project(':02_workshop-lesson-second')
     implementation project(':03_workshop-lesson-three')
     implementation project(':03_homework-fragment_detail_movie')
