--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *.iml
 .gradle
+.codeStyle
 /local.properties
+/.idea/*
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
@@ -13,3 +15,4 @@
 .externalNativeBuild
 .cxx
 local.properties
+/2_detail_movie/consumer-rules.pro
